Changelog for CMFFormController

    (name of developer listed in brackets)

CMFFormController 2.0.5 - Unreleased

    - Fixed some deprecation warnings for CompilerError.
      [hannosch]

    - Cleaned up test infrastructure, removed custom testrunner.
      [hannosch]

CMFFormController 2.0.4 - Released June 17, 2006

    - Fix issue with usage of relative urls for action traversal, rather than
      actual physical paths, which are necessary.
      [alecm]

CMFFormController 2.0.3 - Released June 9, 2006

    - Fix issue with redirecting/traversing to FTI actions which are defined
      in the folder category. Also, made action traversal/redirection less
      error prone.
      [alecm]

CMFFormController 2.0.2 - Released May 15, 2006

    - Only export ZODB controller scripts and validators, not FS versions.
      [rafrombrc]

    - Changed exportimport handlers to depend on GenericSetup directly instead
      of the soon to be removed CMFSetup.
      [hannosch]

    - RedirectToActions call to getActionObject on objects would always fail.
      Fixed http://dev.plone.org/plone/ticket/5446.
      [regebro]

    - Avoid DeprecationWarning for manageAddDelete.
      [hannosch]

    - Update tests to comply with PloneTestCase 0.8 API.
      [hannosch]

CMFFormController 2.0.1 - Released March 28, 2006

    - Fix method alias lookup on TraverseToAction, so that the conversion of
      urls to aliases doesn't cause empty pages to be returned. Remove the alias
      lookup on RedirectToAction because it is entirely unnecessary and
      counter-intuitive. Removed some useless print statements.
      [alecm]

    - Fix two typos in documentation.
      [vinsci]

    - Shut down DeprecationWarning for product_name of ToolInit.
      [hannosch]

CMFFormController 2.0 - Released February 25, 2006

    - Moved xml folder into exportimport module, as tests were expecting it in
      this location.
      [hannosch]
