@@ -1,5 +1,2 @@
-from types import StringType, UnicodeType
-
 ANY_CONTEXT = None
 ANY_BUTTON = None
-STRING_TYPES = [StringType, UnicodeType]
